--- a/XamarinApp/MainPage.xaml
+++ b/XamarinApp/MainPage.xaml
@@ -5,24 +5,35 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="XamarinApp.MainPage">
+  
 
-
-        <ListView x:Name="GirlsView"
-            ItemsSource="{Binding Girls}">
+    <ListView  x:Name="GirlsView" HasUnevenRows="True" ItemsSource="{Binding Girls}" BackgroundColor="LightBlue">
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
                     <ViewCell.View>
-                        <StackLayout>
-                            <Label Text="{Binding Nickname}" TextColor="Black" />
-                            <Label Text="{Binding Age}" TextColor="Black" />
-                            <Label Text="{Binding EyeColor}" TextColor="Black" />
-                        </StackLayout>
+                        <Grid Padding="5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="60"></RowDefinition>
+                                <RowDefinition Height="60"></RowDefinition>
+                                <RowDefinition Height="10"></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"></ColumnDefinition>
+                                <ColumnDefinition Width="2*"></ColumnDefinition>
+                                <ColumnDefinition Width="3*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                      
+                            <Label Grid.Row="0" Grid.Column="1" Text="NickName: " XAlign="Center" YAlign="Center" TextColor="Black" FontAttributes="Bold"/>
+                            <Label Grid.Row="0" Grid.Column="2" Text="{Binding Nickname}" XAlign="Center" YAlign="Center" TextColor="Black"/>
+                            <Label Grid.Row="1" Grid.Column="1" Text="Age: " XAlign="Center" YAlign="Center" TextColor="Black" FontAttributes="Bold"/>
+                            <Label Grid.Row="1" Grid.Column="2" Text="{ Binding Age }" XAlign="Center" YAlign="Center" TextColor="Black"/>
+                            <BoxView Color="{Binding EyeColor}" HeightRequest="2" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"/>
+                            <Image x:Name="backgroundImage" Source="{Binding Picture}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill"/>
+                        </Grid>
                     </ViewCell.View>
                 </ViewCell>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
-  
-
 </ContentPage>
